--- a/irlande.html
+++ b/irlande.html
@@ -25,14 +25,13 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <!-- start banner Area -->
-    <section class="banner-area">
+    <section class="generic-banner relative">
         <!-- Start Header Area -->
         <header class="default-header">
             <nav class="navbar navbar-expand-lg  navbar-light">
@@ -40,8 +39,8 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/logo_2.png" alt="">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="text-white lnr lnr-menu"></span>
                     </button>
 
@@ -54,16 +53,13 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2020</a>
-                            </li>
-                            <li>
-                                <a href="index.html#film">Film Groenland</a>
-                            </li>
-                            <li>
-                                <a href="index.html#contact">Contact</a>
+                                <a href="programme2020.html">Programme 2020</a>
                             </li>
                             <li>
                                 <a href="galerie.html">galerie</a>
+                            </li>
+                            <li>
+                                <a href="index.html#contact">Contact</a>
                             </li>
                             <!-- Dropdown -->
                             <li>
@@ -88,135 +84,81 @@
             </nav>
         </header>
         <!-- End Header Area -->
+        <div class="container">
+            <div class="row height align-items-center justify-content-center">
+                <div class="col-lg">
+                    <div class="generic-banner-content">
+                        <h2 class="text-white">Irlande</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
-    <section class="default-banner active-blog-slider">
-        <div class="item-slider relative" style="background: url(img/accueil/glacier.jpg);background-size: cover;">
-            <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
-            <div class="container">
-                <div class="row fullscreen justify-content-center align-items-center">
-                    <div class="col-md-10 col-12">
-                        <div class="banner-content text-center">
-                            <h4 class="text-white mb-20 text-uppercase">Algol Océans</h4>
-                            <h1 class="text-uppercase text-white">Programme 2020</h1>
-                        </div>
-                    </div>
 
-                </div>
-            </div>
-        </div>
-        <div class="item-slider relative" style="background: url(img/accueil/algol.jpg);background-size: cover;">
-            <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
-            <div class="container">
-                <div class="row fullscreen justify-content-center align-items-center">
-                    <div class="col-md-10 col-12">
-                        <div class="banner-content text-center">
-                            <h4 class="text-white mb-20 text-uppercase">Algol Océans</h4>
-                            <h1 class="text-uppercase text-white">Programme 2020</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item-slider relative" style="background: url(img/accueil/algol3.jpg);background-size: cover;">
-            <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
-            <div class="container">
-                <div class="row fullscreen justify-content-center align-items-center">
-                    <div class="col-md-10 col-12">
-                        <div class="banner-content text-center">
-                            <h4 class="text-white mb-20 text-uppercase">Algol Océans</h4>
-                            <h1 class="text-uppercase text-white">Programme 2020</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-gap info-area">
+    <div class="whole-wrap">
         <div class="container">
 
-            <div class="single-info row mt-40">
-                <div class="col-lg-6 col-md-12 no-padding info-rigth">
-                    <div class="info-content">
-                        <h1 class="pb-30"> Descriptif </h1>
-                        <p>
-                            <h3 class="text-uppercase">Arzal - Stornoway</h3>
-                            <br>
-                            <p>Du samedi 27 avril au vendredi 10 mai (14 jours) : La route du whisky</p>
-                            <p>Embarquement : 26/04 à 18h00, débarquement : 11/05 le matin</p>
-                            <p>Prix par personne : 1 700 € + 420 € caisse de bord.</p>
-                            <br>
-                            <a href="route_whisky_2020.html" class="text-uppercase genric-btn primary-border circle">Programme
-                                détaillé
-                            </a>
-                        </p>
-                        <br>
-                        <p>
-                            <h3 class="text-uppercase">Stornoway - Tromso</h3>
-                            <br>
-                            <p>Du dimanche 12 mai au vendredi 24 mai (13 jours) : La route du nord</p>
-                            <p>Embarquement : 11/05 à 18h00, débarquement : 25/05 le matin.</p>
-                            <p>Prix par personne : 1 600 € + 390 € caisse de bord.</p>
-                            <br>
-                            <a href="route_nord_2020.html" class="text-uppercase genric-btn primary-border circle">Programme
-                                détaillé
-                            </a>
-                        </p>
-                        <br>
-                        <p>
-                            <h3 class="text-uppercase">Spitzberg</h3>
-                            <br>
-                            <p>Du Lundi 27 mai au 28 août : 6 croisières</p>
-                            <p>Tromsø à Longyearbyen : 1 croisière</p>
-                            <p>Longyearbyen - Longyearbyen : 4 croisières</p>
-                            <p>Longyearbyen à Tromsø : 1 croisière</p>
-                            <br>
-                            <a href="spitzberg.html" class="text-uppercase genric-btn primary-border circle">Programme détaillé
-                            </a>
-                        </p>
-                        <br>
-                        <p>
-                            <h3 class="text-uppercase">Tromso - Arzal </h3>
-                            <br>
-                            <p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du
-                                Spitzberg.
-                            </p>
-                            <p>Embarquement : 30/08 à partir de 18h00, débarquement : 21/09 le matin</p>
-                            <p>Prix par personne : 1 700 € + 630 € caisse de bord.</p>
-                            <br>
-                            <a href="retour_norvege.html" class="text-uppercase genric-btn primary-border circle">Programme
-                                détaillé
-                            </a>
-                        </p>
+            <div class="section-top-border text-left">
+                <div class="row">
+                    <div class="col-md">
+                        <p class="text-left">
+                            <ul>
+                                <li>Du dimanche 28 juin au vendredi 10 juillet (13 jours) : Route vers l’Irlande. De Arzal à Kinsale. Embarquement : 27/06 à partir de 18h00, débarquement : 11/07 le matin Prix par personne : 2 100 € + 390 € caisse de bord. 
 
+                                    <br>
+                                    <a href="irlande1.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
+                                </li>
+                                <br>
+                                <li>
+                                    Du dimanche 12 juillet au jeudi 23 juillet (12 jours) : Irlande côte ouest. De Kinsale à Galway. Embarquement : 11/07 à partir de 18h00, débarquement : 24/07 le matin Prix par personne : 2 100 € + 360 € caisse de bord. 
+                                    <br>
+                                    <a href="irlande2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
+                                </li>
+                                <br>
+                                <li> Du samedi 25 juillet au mardi 4 août (11 jours) : Connemara, Irlande du Nord. De Galway à Ballycastle. Embarquement : 24/07 à partir de 18h00, débarquement : 05/08 le matin Prix par personne : 2 000 € + 330 € caisse de bord. 
+                                    <br>
+                                    <a href="irlande3.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé</a>
+                                </li>
+                               
+                            </ul>
+                        </p>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-12 mt-120 text-center  info-left">
-                    <div class="info-thumb">
-                        <img src="img/routewhisky/DSC01673.jpg" class="img-fluid" alt="">
-                    </div>
-                    <br>
-                    <br>
-                    <div class="col-sm">
-                        <div class="info-thumb">
-                            <img src="img/norvege/DSC01892.jpg" class="img-fluid" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="info-thumb">
-                            <img src="img/spitzberg/DSC01994.jpg" class="img-fluid" alt="">
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="info-thumb">
-                            <img src="img/norvege/DSC01836.jpg" class="img-fluid" alt="">
-                        </div>
+                    <div class="col-md">
+                        <figure class="figure">
+                                <img src="img/Carte 2020.png" class="img-fluid" alt="">
+                                <div class="hoverPoint" style="top:808px;left:375px;" data-content="Route vers l'Irlande de Arzal à Kinsale"></div>
+                                <div class="hoverPoint" style="top:553px;left:145px;" data-content="Irlande côte ouest. De Kinsale à Galway"></div>
+                                <div class="hoverPoint" style="top:454px;left:122px;" data-content="Connemara, Irlande du Nord. De Galway à Ballycastle"></div>
+                                <div id="tooltip"></div>
+                            <figcaption class="figure-caption">Route vers l'Irlande en bleu
+                                <br> Irlande côte ouest en turquoise
+                                <br> Connemara, Irlande du Nord en violet</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
+            <div class="section-top-border">
+                Description a compléter !!!!
+            </div>
+            <div class="section-top-border">
+                <div class="row">
+                    <div class="col-md">
+                        <img src="img/spitzberg/IMG_7005.JPG" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md mt-sm-20">
+                        <img src="img/spitzberg/IMG_7077.JPG" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </section>
+    </div>
+
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
         <div class="container">
@@ -248,15 +190,16 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez Email '"
-                                        required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Entrez Email" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Entrez Email '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default">
                                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                                     </button>
                                     <div style="position: absolute; left: -5000px;">
-                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
+                                            type="text">
                                     </div>
 
                                     <!-- <div class="col-lg-4 col-md-4">
@@ -272,7 +215,7 @@
                     <div class="single-footer-widget">
                         <h6>Suivez nous</h6>
                         <div class="footer-social d-flex align-items-center">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Algol-Oceans-746017362081914/">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </div>
