--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
                             <br> RCS Vannes B 402 890 339
                             <br> Le Téno 56130 MARZAN
                             <br> Tél : 02 97 45 03 45 Port : 06 74 10 20 36
+                            <br> <a href="mailto:contact@algol-oceans.com "> E-mail : contact@algol-oceans.com  </a>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
