--- a/programme2019.html
+++ b/programme2019.html
@@ -179,7 +179,7 @@
                         <p>
                             <h3 class="text-uppercase">Tromso - Arzal </h3>
                             <br>
-                            <p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du
+                            <p>Du samedi 31 août au dimanche 20 septembre (21 jours) : retour Norvège par le nord et l’est du
                                 Spitzberg.
                             </p>
                             <p>Embarquement : 30/08 à partir de 18h00, débarquement : 21/09 le matin</p>
@@ -229,6 +229,7 @@
                             <br> RCS Vannes B 402 890 339
                             <br> Le Téno 56130 MARZAN
                             <br> Tél : 02 97 45 03 45 Port : 06 74 10 20 36
+                            <br> <a href="mailto:contact@algol-oceans.com "> E-mail : contact@algol-oceans.com  </a>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
