--- a/spitzberg.html
+++ b/spitzberg.html
@@ -133,7 +133,7 @@
                                     Longyearbyen
                                     - Longyearbyen. Embarquement : 25/06 à partir de 18h00, débarquement : 08/07 le
                                     matin
-                                    Prix par personne : 3 020 € + 420 € caisse de bord.
+                                    Prix par personne : 3 200 € + 420 € caisse de bord.
                                     <br>
                                     <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
                                         détaillé</a>
@@ -227,6 +227,7 @@
                             <br> RCS Vannes B 402 890 339
                             <br> Le Téno 56130 MARZAN
                             <br> Tél : 02 97 45 03 45 Port : 06 74 10 20 36
+                            <br> <a href="mailto:contact@algol-oceans.com "> E-mail : contact@algol-oceans.com  </a>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
